rns-lang/tests/snapshots/error-lexer-strings-unterminated_string_with_newline.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String that breaks
across lines"
.end
----- STDERR -----
Error: unterminated string literal
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/strings/unterminated_string_with_newline.ja:2:1 ]
   │
 2 │ "String that breaks
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
