rns-lang/tests/snapshots/error-lexer-strings-unterminated_string_with_newline_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String that breaks
across lines"
.end
----- STDERR -----
[E001] Error: unterminated string literal
   ╭─[ test_data/integration/error/lexer/strings/unterminated_string_with_newline.ja:2:1 ]
   │
 2 │ "String that breaks
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
