rns-lang/tests/snapshots/error-parser-outside_class_directive-annotation_keyword_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; some comment
; another comment
annotation
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected keyword before class definition
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/rns/test_data/integration/error/parser/outside_class_directive/annotation_keyword.ja:3:1 ]
   │
 3 │ annotation
   │ ─────┬────  
   │      ╰────── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
----- HASH -----
not generated
